task5
task3:Оптимизирован метод setFuelLevel( ) классах Airplane, Boat, Car, Motorcycle

task2-1: доработана работа с отрицательными числами.
Исправлена ошибка Unchecked exception class ValidationException.

task2-2: Оптимизирован метод randomArray в классе Vector3D.
Объект Random создаем один раз.